// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsActivity component should render daily room events 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={[MockFunction]}
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="71ca537b-1b44-42e4-a62a-88230129a7e3"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="a319b2cf-0961-4b2f-a678-54db9b0703d6"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="51e55e9c-9e35-41b7-9ef6-436c3169964c"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d580e792-aebf-4261-9f7e-46c4638d1d9a"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="afcd2980-3e11-4e2c-a5dc-454bb902fe4c"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d013c85b-96a3-48f2-a6f9-29d9c874329b"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="172e380e-a8f0-467d-9557-970f63c2a802"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ea4fce77-98b7-4614-b325-6fca3b95606c"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="435c5534-c5fe-4ea4-8de1-98fff878035b"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b1bff815-9ca0-4056-beb2-7072b9727c24"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="975cfea6-dbbd-41bc-ad66-34f0d4f46d08"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="bb376a8b-a05c-49a8-bce0-04761f137a29"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="cb2eefdc-3bc4-4a7b-b6eb-a67b7604d2e9"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="a12ca428-c33f-459f-b173-992877d6ad73"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="cc17feb3-9155-4f6d-8674-19ddc57ba4e0"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="c3ada233-6bd3-46ad-b215-943b599cd714"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d8c41e6f-a4bf-408d-837c-238f662a5216"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="970bf093-9dc9-4bd4-8527-8ae708c52098"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="8bb285a0-c933-4f28-ba63-0195b41be276"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="c1794778-abd4-4650-8d71-9b2cedab84e5"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="0ab47f61-a5ec-40bb-b3e5-99c0be0e9cba"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="420ef014-79a8-4a39-b3ad-3aa98510bd93"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="57f21885-8d8d-4fa7-975a-65c7e8c42ac1"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="543f56cf-13f6-4fcb-9549-0c1f42b05bf4"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6011fc9d-0097-47b1-bb5b-73b8fd2bd863"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;

exports[`AnalyticsActivity component should render resource not founr 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={
    [MockFunction] {
      "calls": Array [
        Array [
          "analyticsForDailyRoomEvents",
        ],
      ],
    }
  }
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="fb2a62a5-514a-4105-98fd-7ef53c672e69"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="b19ce46e-95e2-406f-9951-c8d6dbff7254"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e17dfc5a-7b9c-4a65-9233-f89592e035ba"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="a3adfe21-ef87-4cda-80b0-d463c910140c"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b70a4cba-bb33-40d9-b5e1-d6844b8cdfbf"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="dfc98b07-a7c9-4cba-8eb2-dad71ed3fbd1"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="db1e0a65-4175-4007-9254-96f93c323fb9"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="7ddaf4a9-95e6-4343-b303-2bea247d78e4"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6f8864a8-4d1a-479d-abf0-a9cac78ca34a"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d936449b-39e8-4212-9a52-42c5e0e3eba5"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="4ce43f81-3b34-4eb8-9e28-8ccf76924c2f"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="30d76c06-1198-4c6e-b2e4-3cd34c8bd7b2"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="3c782bd5-8d5c-4590-ad9c-31c1616141fd"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="9dee4b5d-7092-4e27-abdf-d286d52f4add"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="986cc961-9329-48b6-aff3-283eab062e8f"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="8ff6768a-d8bd-4bd5-8e95-cb0d0b970ec2"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="1d038737-8244-4520-9b3e-8aceeabadefb"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="02e4c5c7-f2f2-4ea4-a08a-d913e70b82f1"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="2561ca6e-17ec-4742-b313-94ddea6a2c54"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b47483ec-4f89-47bf-9b08-331fbec48dae"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="78787dbd-a3ff-46e5-befe-7a738d5a8bc6"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="472c5e9c-b2f6-4340-ad55-54cf2a58d365"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="170d0e6b-78ca-4cbd-af8d-268696f07f24"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e409c257-8a43-4ca5-bd59-390f18da4ff5"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="dfbd9ec0-1cfa-4af4-8eb2-0f55f9a84c28"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;
